:art: [#10] changed all help text to english, changed the celery task name to index_document and added typeddict for the index_document and changed made sure that the data send to it reflects it.
