# src/woo_search/search_index/api/viewsets/publications.py
@@ -1,14 +1,16 @@
 from django.utils.translation import gettext_lazy as _
 
+from dateutil import parser
 from drf_spectacular.utils import extend_schema, extend_schema_view
-from rest_framework import viewsets
+from rest_framework import status, viewsets
 from rest_framework.response import Response
 
-from ...tasks import save_document
+from ...tasks import index_document
+from ...typing import DocumentType
 from ..serializers import DocumentSerializer
 
 
-@extend_schema(tags=["Documenten"])
+@extend_schema(tags=["index"])
 @extend_schema_view(
     create=extend_schema(
         summary=_("Index document metadata."),
@@ -23,5 +25,14 @@ class DocumentViewSet(viewsets.ViewSet):
     def create(self, request):
         serializer = self.serializer_class(data=request.data)
         serializer.is_valid(raise_exception=True)
-        save_document.delay(serializer.data)
-        return Response(serializer.data)
+        es_data = self._parsed_es_data(serializer.data)
+        save_document_task = index_document.delay(es_data)
+        return Response(
+            data={"task_id": save_document_task.id}, status=status.HTTP_202_ACCEPTED
+        )
+
+    def _parsed_es_data(self, data) -> DocumentType:
+        data["creatiedatum"] = parser.parse(data["creatiedatum"])
+        data["registratiedatum"] = parser.parse(data["registratiedatum"])
+        data["laatst_gewijzigd_datum"] = parser.parse(data["laatst_gewijzigd_datum"])
+        return data
